<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/bungee"
            android:text="@string/welcome_text"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/sign_up_message"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/full_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="8dp"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/edit_text_style"
                    android:layout_height="50dp"
                    android:textSize="14sp"
                    android:hint="@string/name_edit_text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/edit_text_style"
                    android:layout_height="49dp"
                    android:textSize="14sp"
                    android:hint="@string/username_edit_text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/edit_text_style"
                    android:layout_height="50dp"
                    android:textSize="14sp"
                    android:hint="@string/email_edit_text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/edit_text_style"
                    android:layout_height="50dp"
                    android:textSize="14sp"
                    android:hint="@string/phone_edit_text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:endIconMode="password_toggle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/edit_text_style"
                    android:inputType="textPassword"
                    android:layout_height="50dp"
                    android:textSize="14sp"
                    android:hint="@string/password_edit_text"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="6dp"
            android:text="@string/sign_up_button"
            android:background="@drawable/custom_ripple" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:textSize="12sp"
            android:text="@string/login_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

    </LinearLayout>
</ScrollView>